--- a/index.ipynb
+++ b/index.ipynb
@@ -44,13 +44,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Your code here\n",
     "def fib(n):\n",
-    "    return nth_number"
+    "    if n < 1:\n",
+    "        return \"N must be an integer greater then 1\"\n",
+    "    elif n in [1,2]:\n",
+    "            return 2\n",
+    "    else:\n",
+    "        return fib(n-1) + fib(n-2)\n",
+    "\n",
+    "fib(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2\n",
+      "2 2\n",
+      "3 4\n",
+      "4 6\n",
+      "5 10\n",
+      "6 16\n",
+      "7 26\n",
+      "8 42\n",
+      "9 68\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,10):\n",
+    "    print(i, fib(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def myparse(a):\n",
+    "    if :\n",
+    "        print('list')\n",
+    "        print(a)\n",
+    "        a\n",
+    "    else:\n",
+    "        print(a)\n",
+    "        [myparse(a[0]), myparse(a[1:])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L=[1,[2,3,[4,5,6]], 7, [8], [9,10]] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "list\n",
+      "[1, [2, 3, [4, 5, 6]], 7, [8], [9, 10]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "myparse(L)"
    ]
   },
   {
@@ -120,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
